[gd_scene load_steps=9 format=3 uid="uid://stnv4kvm8g88"]

[ext_resource type="FontFile" uid="uid://b7ishda7ounim" path="res://Fonts/Orbitron-Regular.ttf" id="1_sjs17"]
[ext_resource type="Script" uid="uid://cyubol7ymis02" path="res://Scenes/pause_menu.gd" id="1_u8tnp"]
[ext_resource type="Texture2D" uid="uid://dh4te2duf8k0e" path="res://Sprites/RESUME.png" id="1_vmyb1"]
[ext_resource type="Texture2D" uid="uid://blnqhctjrp5wo" path="res://Sprites/RESUME_HOVER.png" id="2_myy0f"]
[ext_resource type="Texture2D" uid="uid://chc513t4macs8" path="res://Sprites/MAINMENU.png" id="3_sjs17"]
[ext_resource type="Texture2D" uid="uid://bsykoflj1sxhi" path="res://Sprites/MAINMENU_HOVER.png" id="4_u8tnp"]
[ext_resource type="Texture2D" uid="uid://4g81e0l3w7g1" path="res://Sprites/QUITGAME_P.png" id="5_myy0f"]
[ext_resource type="Texture2D" uid="uid://cx18o6dwx8afl" path="res://Sprites/QUITGAME_P_HOVER.png" id="6_myy0f"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u8tnp")
tween_duration = 0.1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 94.0
offset_top = 51.0
offset_right = 610.0
offset_bottom = 140.0
theme_override_colors/font_color = Color(0.0352941, 0.0588235, 0.647059, 1)
theme_override_fonts/font = ExtResource("1_sjs17")
theme_override_font_sizes/font_size = 70
text = "PAUSE"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -500.0
offset_right = 516.0
offset_bottom = 63.0
grow_vertical = 0
theme_override_constants/separation = -50

[node name="RESUME" type="TextureButton" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_vmyb1")
texture_pressed = ExtResource("1_vmyb1")
texture_hover = ExtResource("2_myy0f")

[node name="Menu" type="TextureButton" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_sjs17")
texture_pressed = ExtResource("3_sjs17")
texture_hover = ExtResource("4_u8tnp")

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_myy0f")
texture_pressed = ExtResource("5_myy0f")
texture_hover = ExtResource("6_myy0f")

[connection signal="mouse_entered" from="VBoxContainer/RESUME" to="." method="_on_resume_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/RESUME" to="." method="_on_resume_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/RESUME" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Menu" to="." method="_on_menu_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Menu" to="." method="_on_menu_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_mainmenu_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
